--- a/DAvalues.Rmd
+++ b/DAvalues.Rmd
@@ -1,3 +1,12 @@
+---
+title: "DA values"
+author: "David Navega, João Coelho"
+date: "4 de Agosto de 2015"
+output: html_document
+---
+
+```{r, include=FALSE, echo=FALSE}
+library(knitr)
 # main file for Gonçalves et al. Skeletal Mass Regression Project
 #
 # Keypoints to address in this project:
@@ -68,3 +77,11 @@ for(i in seq(1,NCOL(metatarsals),2)){
   result <- rbind(result, unlist(bilateral.asymmetry(m)))
 }
 rownames(result) <- var.names
+
+```
+
+
+```{r}
+kable(result)
+```
+
